[tool.poetry]
name = "analyse-jp"
version = "0.1.0"
description = ""
authors = ["gdbdg <guillaume.degranrut@gmail.com>"]
readme = "README.md"
packages = [{include = "analyse_jp"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"


[tool.poetry.dev-dependencies]
black = "^23.7.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
